@@ -34,18 +34,18 @@ typedef struct ambtree {
 }  AMBTREE;			/* ambient octree */
 
 typedef struct {
-	short  t, p;		/* theta, phi indices */
 	COLOR  v;		/* division sum (partial) */
 	float  r;		/* 1/distance sum */
 	float  k;		/* variance for this division */
 	int  n;			/* number of subsamples */
+	short  t, p;		/* theta, phi indices */
 }  AMBSAMP;		/* ambient sample division */
 
 typedef struct {
-	COLOR  acoef;		/* division contribution coefficient */
 	FVECT  ux, uy, uz;	/* x, y and z axis directions */
-	short  nt, np;		/* number of theta and phi directions */
+	COLOR  acoef;		/* division contribution coefficient */
 	int    ns;		/* number of super-samples */
+	short  nt, np;		/* number of theta and phi directions */
 }  AMBHEMI;		/* ambient sample hemisphere */
 
 extern double  maxarad;		/* maximum ambient radius */
