@@ -50,7 +50,6 @@ typedef struct {
 }  OBSCACHE;		/* obstructor cache */
 
 typedef struct {
-	int  sflags;		/* source flags */
 	FVECT  sloc;		/* direction or position of source */
 	FVECT  ss[3];		/* source dimension vectors, U, V, and W */
 	float  srad;		/* maximum source radius */
@@ -72,6 +71,7 @@ typedef struct {
 #ifdef  SHADCACHE
 	OBSCACHE  *obscache;    /* obstructor cache */
 #endif
+	int  sflags;		/* source flags */
 }  SRCREC;		/* light source */
 
 #define MAXSPART	64		/* maximum partitions per source */
@@ -84,10 +84,10 @@ typedef struct {
 #define snorm		ss[SW]		/* normal vector for flat source */
 
 typedef struct {
+	double  dom;				/* solid angle of partition */
 	int  sn;				/* source number */
 	short  np;				/* number of partitions */
 	short  sp;				/* this partition number */
-	double  dom;				/* solid angle of partition */
 	unsigned char  spt[MAXSPART/2];		/* source partitioning */
 }  SRCINDEX;		/* source index structure */
 
