@@ -1529,3 +1529,5 @@ final bin file.  (Pretty serious, actually.)
 
 Added -Dfseeko=fseek to MACH= line for linux, as fseeko(3) seems to be
 broken in current versions of Linux.  (Need to remove this later.)
+
+Rearranged struct's for better efficiency on 64-bit architectures.
